fix no scrolling on iPhone SE suggested edits

--- a/growth-firebase/public/ConceptB/css/style.css
+++ b/growth-firebase/public/ConceptB/css/style.css
@@ -404,6 +404,7 @@ opacity: .71;
   align-items: center;
   height: calc(100vh - 208px);
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 #se_count {
